--- a/package.json
+++ b/package.json
@@ -53,20 +53,20 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
     "load-grunt-tasks": "^3.1.0",
     "time-grunt": "^1.1.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": ">=0.4.0"
   },
   "dependencies": {
     "chalk": "^1.0.0",
     "combine-mq": "latest",
-    "pretty-bytes": "^1.0.4"
+    "pretty-bytes": "^4.0.2"
   },
   "keywords": [
     "gruntplugin"
